corpus/options/boolean.txt
===
options - boolean
===

msc {
    wordwraparcs=true;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (options
        (option
            (boolean_option_key)
            (equals)
            (boolean)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean - alternate (off)
===

msc {
    wordwraparcs=off;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (options
        (option
            (boolean_option_key)
            (equals)
            (boolean)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean - alternate (0/1)
===

msc {
    wordwraparcs=1;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (options
        (option
            (boolean_option_key)
            (equals)
            (boolean)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean - quoted
===

msc {
    wordwraparcs="true";
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (options
        (option
            (boolean_option_key)
            (equals)
            (booleanlike_string)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean - quoted alternate (on/off)
===

msc {
    wordwraparcs="off";
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (options
        (option
            (boolean_option_key)
            (equals)
            (booleanlike_string)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean - quoted alterante (0/1)
===

msc {
    wordwraparcs="1";
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (options
        (option
            (boolean_option_key)
            (equals)
            (booleanlike_string)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean ERROR - regular string for value
===

msc {
    wordwraparcs="waar";
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (ERROR
        (boolean_option_key)
        (equals)
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean ERROR - number > 1 for value
===

msc {
    wordwraparcs=3;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (ERROR
        (boolean_option_key)
        (equals)
    )
    (entities
        (entity
            (entity_identifier)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
options - boolean ERROR - unquoted string for value
===

msc {
    wordwraparcs=unquotedthing;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (ERROR
        (boolean_option_key)
        (equals)
    )
    (entities
        (entity
            (entity_identifier)
        )
        (semicolon)
    )
    (curly_bracket_close)
)
